tests/ui/hygiene/rustc_res/private_ctor_not_available_in_child_scope_through_reexport.rs
//@ fail
//@ stderr

#![allow(unused)]

use def::S;

pub mod def {
    pub struct S(u32);

    mod inner {
        fn f() {
            let _ = crate::S(0);
        }
    }
}
